# grant-funnel

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  grant-maker-extraction-simple.txt  grant-maker-extraction.txt
.claude/: settings.local.json
backend/: alembic.ini  pyproject.toml
backend/alembic/versions/: 58c20adbd18d_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: funnel.py  grants.py  organizations.py  tenants.py
backend/app/models/: __init__.py  base.py  funnel_entry.py  grant.py  organization.py  tenant.py
backend/app/schemas/: __init__.py  funnel_entry.py  grant.py  organization.py  tenant.py
backend/indexer/: __main__.py  base.py  loader.py
backend/indexer/connectors/: propublica.py
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/pages/: FunnelPage.tsx  OrganizationDetailPage.tsx  OrganizationsPage.tsx  TenantsPage.tsx
frontend/src/types/: index.ts
scripts/: seed.py
