[project]
name = "grant-funnel-backend"
version = "0.1.0"
description = "Grant Funnel — backend API and indexer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "indexer"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
